--- a/meetups/kanto/006/p/mh35.md
+++ b/meetups/kanto/006/p/mh35.md
@@ -13,3 +13,5 @@ Web開発
 imasbook次期で使うだろうと思われるMarkdown+Vivliostyleを用いた組版システムの後継を完成させる
 
 ## 今日の成果
+
+とりあえず今のイメージでは動かないのでイメージビルドからやり直す方針に変更。イメージビルドが1回25分かかる模様でタグ付けビルドが終わらない
